[tool.poetry]
name = "rb_api"
version = "0.1.0"
description = ""
authors = ["\"\""]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
graphene = "^3.0"
SQLAlchemy = "^1.4.36"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
Faker = "^13.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
